--- a/config.yaml
+++ b/config.yaml
@@ -10,6 +10,7 @@ pbj:
   # OpenAI Settings
   openai_api_key: "${OPENAI_API_KEY}"
   openai_model: "gpt-4"
+  max_tokens: 6000  # Reduced from 8000 to avoid token limit issues
   
   # Output Settings
   output_base_dir: "processed_documents"
